--- a/client/src/components/bars/Footer/Footer.module.css
+++ b/client/src/components/bars/Footer/Footer.module.css
@@ -7,6 +7,7 @@
   /* bottom => 0 */
   bottom: -35%;
   padding-bottom: 20%;
+  padding-top: 20%;
   width: 100%;
   border-radius:100%;
   animation: blur-in 0.2s linear both} @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}
