--- a/client/src/components/views/HomePage/HomePage.module.css
+++ b/client/src/components/views/HomePage/HomePage.module.css
@@ -11,7 +11,8 @@
   flex-direction: column;
   justify-content: center;
   position: absolute;
-  animation:blur-in 0.4s linear both
+  animation:blur-in 0.4s linear both;
+  width: 100%;
   }
   @keyframes blur-in {
     0% {filter:blur(12px); opacity:0} 100% {filter:blur(0); opacity:1}
@@ -41,9 +42,11 @@
   }
 
 .sectionCourses {
+  scale: 0.8;
   margin-top: 4%;
   display: flex;
   flex-direction: column;
+  width: 100%;
   align-items: center;
   transition: transform 0.3s, filter 0.3s;
   }
