--- a/client/src/components/views/LandingPage/LandingPage2.module.css
+++ b/client/src/components/views/LandingPage/LandingPage2.module.css
@@ -39,7 +39,7 @@
   .title {
     font-size: 100px;
     position: fixed;
-    top: -12%;
+    top: -15%;
     left: 0;
     padding-top: 5%;
     width: 100%;
@@ -113,6 +113,7 @@
     justify-content: center;
     align-items: center;
     color:#1a936f;
+    margin-top: 2%;
     width: 100%;
     height:80%;
   
