--- a/client/src/components/datos/CoursesPreview/CoursesPreview.css
+++ b/client/src/components/datos/CoursesPreview/CoursesPreview.css
@@ -82,4 +82,13 @@
    border: 1px solid  rgb(255, 255, 255);
 }
     
+@media screen and (max-width: 1200px) {
+    .coursesSwiperComponent {
+        width: 110%;
+    }
+}
+
     
+@media screen and (max-width: 700px) {
+    
+}
