--- a/client/src/components/bars/navBar/navBar.module.css
+++ b/client/src/components/bars/navBar/navBar.module.css
@@ -8,6 +8,7 @@
   top: 0;
   width: 100%;
   box-sizing: border-box;
+  /* OPCION AGREGAR PADDING-BOTTOM: 2% */
   padding: 2% 0 0;
   animation:blur-in 0.4s linear both
   } @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
@@ -23,6 +24,7 @@
     display: flex;
     align-items: center;
     float: left;
+    transform: translateY(-25%);
     }
     .mainLogo {
         margin: 0 2px;
