--- a/client/src/components/views/AdminPanel/AdminPanel.module.css
+++ b/client/src/components/views/AdminPanel/AdminPanel.module.css
@@ -4,10 +4,11 @@
   display: flex;
   flex-direction: row;
   padding: 4% 0;
+  color: black;
 }
 
 .message{
-  position: absolute;
+  position:sticky;
   top:12%;
   width:100%;
   height: 4%;
@@ -17,7 +18,7 @@
 
 .h1{
   margin: 12%;
-  color: white;
+  color: black;
   height: 20px;
   font-size: 10px;
 
