--- a/client/src/components/bars/filterBar/FilterBar.module.css
+++ b/client/src/components/bars/filterBar/FilterBar.module.css
@@ -65,20 +65,39 @@
    }
 }
 
-.filterOverlay {
-   position: fixed;
+.overlay {
+   position: absolute;
    top: 0;
    bottom: 0;
+   left: 0;
+   right: 0;
    z-index: 9998;
-   width: 100%;
+   width: 100vw;
+   height: 100vh;
    background-color: rgba(0, 0, 0, 0.5);
-   height: 100%;
 }
 
-.filterModal {
+/* .reponsiveFilter {
+   /* position: absolute; */
+/* } */ 
+
+.modal {
+   margin:25%;
+   z-index: 9999;
+   /* top: 20%; */
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   align-self: center;
    background-color: white;
+   position:absolute;
+   height: 50%;
+   width: 80%;
 }
-
+.modal select {
+   width: 50%;
+   height: 10%;
+}
 
 /* ----------- RESPONSIVE ------------ */
 
@@ -90,7 +109,8 @@
 
 @media screen and (max-width: 700px) {
    .responsive-component{
-      display: block;
+      top: var(--navFilterHeight);
+      /* position: sticky; */
       display:flex;
       align-items: center;
       justify-content: space-around;
