--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,10 +5,10 @@
     --navFilterHeight: 10vh;
 }
 
-html {
-    /* box-sizing: border-box;
+/*html {
+     box-sizing: border-box;
   }
   *, *::before, *::after {
-    box-sizing: inherit; */
+    box-sizing: inherit; 
   }
-  
+  */
