--- a/client/src/components/bars/filterBar/FilterBar.module.css
+++ b/client/src/components/bars/filterBar/FilterBar.module.css
@@ -77,12 +77,10 @@
    background-color: rgba(0, 0, 0, 0.5);
 }
 
-/* .reponsiveFilter {
-   /* position: absolute; */
-/* } */ 
-
 .modal {
-   margin:25%;
+   /* margin:25% 0; */
+   right: 0;
+   left: 0;
    z-index: 9999;
    /* top: 20%; */
    display: flex;
@@ -121,6 +119,11 @@
       box-sizing: border-box;
       background-color: rgba(0, 0, 0, 0.672);
    }
+   .reponsiveFilter {
+      /* position: absolute; */
+      width: 100%;
+      height: 4%;
+  }
    .responsive-component button {
       width: 40%;
       height: 2.5rem;
