--- a/client/src/components/bars/filterBar/FilterBar.module.css
+++ b/client/src/components/bars/filterBar/FilterBar.module.css
@@ -67,6 +67,7 @@
 
 .overlay {
    position: absolute;
+
    top: 0;
    bottom: 0;
    left: 0;
@@ -78,7 +79,8 @@
 }
 
 .modal {
-   /* margin:25% 0; */
+   margin:25% 0;
+   margin-left:10%;
    right: 0;
    left: 0;
    z-index: 9999;
