searchbar_no_funcionaba_en_detailYmuchomás

--- a/client/src/components/views/Cart/Cart.module.css
+++ b/client/src/components/views/Cart/Cart.module.css
@@ -33,11 +33,12 @@
   .product {
       display: flex;
       align-items: center;
-      width: 500px;
+      width: 600px;
       height:100px;
+
   
       border-radius: 5px;
-      /* padding: 10px; */
+      padding: 10px;
       margin: 10px;
       background-color: rgba(240, 248, 255, 0.26);
     }
@@ -63,7 +64,6 @@
   
   
   .total {
-    margin-top: -4%;
       padding-left: 17%;
       width: 65%;
       text-align: center;
@@ -71,7 +71,7 @@
   }
   
   
-  .name{
+  .name2{
    font-size: 20px;
   width: 300px;
   }
@@ -126,3 +126,44 @@
       height: 25px;
       /* width: max-content; */
       /* margin-bottom: 4%;    */}
+
+      .boton {
+        display: inline-block;
+        border-radius: 4px;
+        background-color: #28b0b4;
+        border: none;
+        color: #ffffff;
+        text-align: center;
+        font-size: 28px;
+        padding: 20px;
+        height: 60px;
+        width: 300px;
+        transition: all 0.5s;
+        cursor: pointer;
+        margin: 5px;
+      }
+      
+      .buttonDisabled {
+        background-color: white;
+        border: none;
+        color: white;
+      }
+      .buttonDisabled:hover {
+        cursor: default;
+      }
+      
+      .boton:hover {
+        background-color: #0023944f;
+        opacity: 1;
+      }
+      
+      .name{
+          margin-left: 10%;
+          font-size: 20px;
+          margin-top: 0%;
+          width: 200px;}
+
+    
+          .h1{
+            margin-left: -50%;
+          }
