--- a/client/src/components/datos/PagoMetamask/PagoMetamask.module.css
+++ b/client/src/components/datos/PagoMetamask/PagoMetamask.module.css
@@ -3,6 +3,7 @@
 .container{
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 48px;
     padding: 4%;
     width: 100%;
@@ -32,11 +33,10 @@
 
 
 .txt{
-    margin-left: 5%;
     font-size: 16px;
 }
 .paymentButton{
-    width: 150px;
+    width: 100%;
     font-size: 16px;
 
 }
