--- a/client/src/components/views/Shop/Shop.module.css
+++ b/client/src/components/views/Shop/Shop.module.css
@@ -1,6 +1,7 @@
 .component {
   /* padding: 2px ; */
   /* padding-bottom: 10%; */
+  width: 100%;
   margin-top: var(--navBarHeight);
   min-height: calc(100vh - var(--navBarHeight));
   display: flex;
