--- a/client/src/components/bars/filterBar/FilterBar.module.css
+++ b/client/src/components/bars/filterBar/FilterBar.module.css
@@ -7,34 +7,33 @@
       z-index: 1;
       color: aliceblue;
       background-color: rgba(0, 0, 0, 0.672);
-      animation:blur-in 1s linear both} @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
+      animation:blur-in 1s linear both
+   } @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
 
-   .item {
+   /* .item {
       font-size: 70%;
       margin-bottom:-1%;
       display: flex;
       justify-content: center;
       justify-items: center;
       align-items: center; 
-   }
-   .options{
+   } */
+   /* .options{
       scale:0.7;
       margin-top: 4%;
       font-size:80%;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       justify-items: center;
-   }
-
-
-   .buttonContainer {
+   } */
+   /* .buttonContainer {
       display: flex;
       align-items: center;
       justify-content: space-around;
       width: 400px;
-   }
+   } */
 
-   .mainButton {
+   /* .mainButton {
       display: flex;
       padding: 4% 37%;
       background-color: black;
@@ -42,7 +41,7 @@
       border-image: linear-gradient(to right, #ff00ff, #ff0000) 1;
       background-clip: padding-box;
       animation: borderGradientAnimation1 infinite 2.5s;
-   }
+   } */
 
 @keyframes borderGradientAnimation1 {
    0% {
@@ -67,7 +66,6 @@
 
 .overlay {
    position: absolute;
-
    top: 0;
    bottom: 0;
    left: 0;
@@ -79,12 +77,10 @@
 }
 
 .modal {
-   margin:25% 0;
-   margin-left:10%;
+   margin:15% 0 0 10%;
    right: 0;
    left: 0;
    z-index: 9999;
-   /* top: 20%; */
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -110,16 +106,17 @@
 @media screen and (max-width: 700px) {
    .responsive-component{
       top: var(--navFilterHeight);
-      /* position: sticky; */
       display:flex;
       align-items: center;
-      justify-content: space-around;
+      justify-content: center;
+      gap: 1rem;
       width: 100%;
       height: 4%;
       padding: 1rem;
       color: aliceblue;
       box-sizing: border-box;
       background-color: rgba(0, 0, 0, 0.672);
+      overflow: hidden;
    }
    .reponsiveFilter {
       /* position: absolute; */
