--- a/client/src/components/datos/Comments/Comments.module.css
+++ b/client/src/components/datos/Comments/Comments.module.css
@@ -1,6 +1,42 @@
-.component {
+.allComments {
+  width: 100%;
   display: flex;
-  height: 40vh;
-  width: 100vw;
-  border: 1px solid black;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.oldComment {
+  display: flex;
+  gap: 5px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 100%;
+  min-width: 300px;
+  background-color: rgba(245, 245, 245, 0.726);
+  border: 1px solid gray;
+  border-radius: 10px;
+}
+
+.oldComment-dark {
+  background-color: rgb(51, 51, 51);
+}
+
+.message{
+  border-radius: 5px;
+  background-color: rgb(243, 243, 243);
+  padding: 5px;
+  width: 100%;
+  font-size: 14px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.message-dark {  
+  background-color: rgb(51, 51, 51);
+}
+
+.date {
+  display: flex;
+  justify-content: end;
+  margin-top: 5px;
+  color: gray;
 }
