--- a/client/src/components/datos/Comments/subComponents/PublishComment.module.css
+++ b/client/src/components/datos/Comments/subComponents/PublishComment.module.css
@@ -9,6 +9,10 @@
     box-shadow: 1px 1px 5px rgba(128, 128, 128);
     border-radius: 10px;
 }
+.newComment-dark {
+    box-shadow: 1px 1px 5px rgb(156, 156, 156);
+    background-color: rgb(51, 51, 51);
+}
 
 .profilePicture {
     display: flex;
@@ -20,6 +24,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .commentInfo {
@@ -28,7 +33,6 @@
     width: 100%;
     margin: 10px;
     margin-left: 0;
-    /* gap: 5px; */
 }
 
 .header {
@@ -51,13 +55,16 @@
     font-size: 14px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.message-dark textarea{
+    box-shadow: none;
+    background-color: rgb(51, 51, 51);
+}
 
 .publish {
     display: flex;
     justify-content: end;
     margin-top: 5px;
 }
-
 .publish button {
     border: none;
     background-color: rgb(0, 140, 158, 0.7);
@@ -67,4 +74,6 @@
 }
 .publish:hover button{
     transform: scale(1.05);
+    cursor: pointer;
 }
+
