--- a/client/src/components/datos/CoursesDetails/CourseDetails.module.css
+++ b/client/src/components/datos/CoursesDetails/CourseDetails.module.css
@@ -78,7 +78,7 @@ h4 {
     border-radius: 5%;
     object-fit: cover;
     animation: rotate-vertical-center 2s;
-    box-shadow: 0px 0px 10px #ffffff;
+    box-shadow: 0px 0px 3px gray;
 }
 
 @keyframes rotate-vertical-center {
@@ -148,8 +148,8 @@ h4 {
 
 
 .data-dark {
-  background-color: rgb(83, 83, 83);
-  box-shadow: inset 1px 1px 5px rgb(255, 255, 255);
+  box-shadow: 1px 1px 5px rgb(156, 156, 156);
+  background-color: rgb(51, 51, 51);
 }
 .subData {
     margin: 2%;
@@ -178,8 +178,8 @@ h4 {
     animation: slide-in-left 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 .description-dark {
-  background-color: rgb(83, 83, 83);
-  box-shadow: inset 1px 1px 5px rgb(255, 255, 255);
+  box-shadow: 1px 1px 5px rgb(156, 156, 156);
+  background-color: rgb(51, 51, 51);
 }
 @keyframes slide-in-left {
   0% {
