--- a/client/src/components/datos/CoursesDetails/CourseDetails.module.css
+++ b/client/src/components/datos/CoursesDetails/CourseDetails.module.css
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     text-align: center;
     animation: slide-in-right 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
