--- a/client/src/components/views/Profile/Profile.module.css
+++ b/client/src/components/views/Profile/Profile.module.css
@@ -3,7 +3,7 @@
     min-height: calc(100vh - var(--navBarHeight));
     margin: 6%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 50px;
