--- a/client/src/components/views/CoursePage/CoursePage.module.css
+++ b/client/src/components/views/CoursePage/CoursePage.module.css
@@ -1,12 +1,12 @@
 .component {
+    padding-bottom: var(--footerHeight);
     margin-top: var(--navBarHeight);
-    min-height: calc(100vh - var(--navBarHeight));
+    min-height: calc(100vh - var(--navBarHeight));    
+    width: 100%;
     position: absolute;
     display: flex;
     flex-direction: column; 
     align-items: center;
-    padding-bottom: 20%;
-    width: 100%;
     animation:blur-in 0.4s linear both;
 } @keyframes blur-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}} 
 
