--- a/client/src/components/views/Profile/Profile.module.css
+++ b/client/src/components/views/Profile/Profile.module.css
@@ -195,12 +195,14 @@
 
 .favorites {
     display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
     flex-wrap: wrap;
     width: 100%;
     border-radius: 8px;
     background-color: whitesmoke;
     box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
-    height: 400px;
+    max-height: 400px;
     overflow-y: scroll;
 }
 .favorites-dark {
@@ -208,6 +210,46 @@
     box-shadow: inset 1px 1px 5px rgba(128, 128, 128);
 }
 
+.favorite {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+    width: 45%;
+    min-width: 280px;
+    /* height: 130px; */
+    margin: 10px;
+    border: 1px solid rgba(155, 155, 155, 0.555);
+    border-top: none;
+    border-left: none;
+    border-bottom-right-radius: 10px;
+    overflow: hidden;
+}
+
+.image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.image img {
+    width: 150px;
+    height: 130px;
+    object-fit: cover;
+}
+
+.courseInfo {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+}
+.courseInfo p {
+    font-weight: bold;
+}
+.courseInfo a {
+    font-weight: bold;
+    color: rgba(6, 103, 116);
+    text-decoration-line: none;
+}
 
 /* ///////////////////////////REVIEWS//////////////////////////////// */
 .reviews {
@@ -228,9 +270,11 @@
 
 .oldComment {
     display: flex;
-    gap: 5px;
     width: 95%;
     margin: 10px;
+    margin-bottom: 0;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgb(196, 196, 196);
 }
 
 .courseImage {
@@ -239,7 +283,7 @@
 }
 
 .courseImage img {
-    width: 100px;
+    width: 130px;
     height: 100px;
     object-fit: cover;
     border-radius: 10px;
