--- a/client/src/components/views/Profile/Profile.module.css
+++ b/client/src/components/views/Profile/Profile.module.css
@@ -125,7 +125,7 @@
 
 .profileImage {
     position: relative;
-    width: 180px;
+    width: 225px;
     display: flex;
     justify-content: center;
 }
@@ -145,8 +145,8 @@
 
 .config {
     position: absolute;
-    top:  5px;
-    right: -25px;
+    top:  0px;
+    right: 0px;
 }
 
 .config img {
@@ -216,12 +216,11 @@
     flex-wrap: nowrap;
     width: 45%;
     min-width: 280px;
-    /* height: 130px; */
     margin: 10px;
     border: 1px solid rgba(155, 155, 155, 0.555);
     border-top: none;
     border-left: none;
-    border-bottom-right-radius: 10px;
+    border-bottom-right-radius: 10px;    
     overflow: hidden;
 }
 
@@ -270,6 +269,9 @@
 
 .oldComment {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
     width: 95%;
     margin: 10px;
     margin-bottom: 0;
@@ -293,13 +295,14 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    width: 100%;
+    width: 80%;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .message {
