--- a/client/src/components/bars/filterBar/FilterBar.module.css
+++ b/client/src/components/bars/filterBar/FilterBar.module.css
@@ -111,11 +111,11 @@
 
 /* ----------- RESPONSIVE ------------ */
 
-/* @media screen and (width > 700px) {
+@media screen and (width > 700px) {
     .responsive-component {
         display: none;
     }
-} */
+}
 
 @media screen and (max-width: 700px) {
    .responsive-component{
